@@ -36,6 +36,7 @@ Please report any issue over on [GitHub here](https://github.com/ramdor/Thetis/i
 - [fix] fix for tcpip cat server where if a multiple cat message arrived, then only the first would be processed
 - [fix] simulated tci spot clicks using bespoke TCI message [spot_simulate_click] now also sends out [rx_clicked_on_spot] defaulted to rx1 and vfoa
 - [fix] when adcs were linked, unwinding of adc overload attenuation did not always return to original att
+- [fix] PS SetPk reset if user selects different radio model
 
 ## v2.10.3.8 - Change Log
 - [fix] maintain delta checkbox now greyed if adjust min to noise floor is unchecked
